--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,14 +5,14 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
          version="2.5">
   <servlet>
-    <servlet-name>HelloAppEngine</servlet-name>
-    <servlet-class>blog.HelloAppEngine</servlet-class>
+    <servlet-name>Servlet</servlet-name>
+    <servlet-class>blog.Servlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>HelloAppEngine</servlet-name>
-    <url-pattern>/hello</url-pattern>
+    <servlet-name>Servlet</servlet-name>
+    <url-pattern>/blogThings</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>blog.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
