--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,11 +5,11 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
          version="2.5">
   <servlet>
-    <servlet-name>Servlet</servlet-name>
+    <servlet-name>blog</servlet-name>
     <servlet-class>blog.Servlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>Servlet</servlet-name>
+    <servlet-name>blog</servlet-name>
     <url-pattern>/blogThings</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
