--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
-         version="2.5">
+
+<web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
   <servlet>
-    <servlet-name>blog</servlet-name>
+    <servlet-name>Servlet</servlet-name>
     <servlet-class>blog.Servlet</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>blog</servlet-name>
-    <url-pattern>/blogThings</url-pattern>
+    <servlet-name>Servlet</servlet-name>
+    <url-pattern>/blog</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>blog.jsp</welcome-file>
+    <welcome-file>index.html</welcome-file>
   </welcome-file-list>
 </web-app>
