--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <web-app xmlns="http://java.sun.com/xml/ns/javaee" version="2.5">
-  <servlet>
-    <servlet-name>Servlet</servlet-name>
-    <servlet-class>blog.Servlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Servlet</servlet-name>
-    <url-pattern>/blog</url-pattern>
-  </servlet-mapping>
-  <welcome-file-list>
-    <welcome-file>blog.jsp</welcome-file>
-  </welcome-file-list>
+	<servlet>
+		<servlet-name>Servlet</servlet-name>
+		<servlet-class>blog.Servlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Servlet</servlet-name>
+		<url-pattern>/blog</url-pattern>
+	</servlet-mapping>
+  
+	<servlet>
+		<servlet-name>CronServlet</servlet-name>
+		<servlet-class>blog.CronServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>CronServlet</servlet-name>
+		<url-pattern>/blog</url-pattern>
+	</servlet-mapping>
+  
+	<welcome-file-list>
+		<welcome-file>blog.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
