--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -28,7 +28,20 @@
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>CronServlet</servlet-name>
-		<url-pattern>/blog</url-pattern>
+		<url-pattern>/cronblog</url-pattern>
+	</servlet-mapping>
+  
+	<welcome-file-list>
+		<welcome-file>blog.jsp</welcome-file>
+	</welcome-file-list>
+	
+	<servlet>
+		<servlet-name>SubscribeServlet</servlet-name>
+		<servlet-class>blog.SubscribeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>SubscribeServlet</servlet-name>
+		<url-pattern>/subscribe</url-pattern>
 	</servlet-mapping>
   
 	<welcome-file-list>
