--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,5 +47,18 @@
 	<welcome-file-list>
 		<welcome-file>blog.jsp</welcome-file>
 	</welcome-file-list>
+	
+	<servlet>
+		<servlet-name>UnsubscribeServlet</servlet-name>
+		<servlet-class>blog.UnsubscribeServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>UnsubscribeServlet</servlet-name>
+		<url-pattern>/unsubscribe</url-pattern>
+	</servlet-mapping>
+  
+	<welcome-file-list>
+		<welcome-file>blog.jsp</welcome-file>
+	</welcome-file-list>
 
 </web-app>
