--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
     <url-pattern>/sign</url-pattern>
   </servlet-mapping>
   <welcome-file-list>
-    <welcome-file>NewPost.jsp</welcome-file>
+    <welcome-file>BlogPost.html</welcome-file>
   </welcome-file-list>
 	<servlet>
 		<servlet-name>Servlet</servlet-name>
