--- a/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
+++ b/.settings/com.google.cloud.tools.eclipse.appengine.deploy.prefs
@@ -1,4 +1,4 @@
-account.email=christopher.gang@gmail.com
+account.email=christopher.sickler@utexas.edu
 eclipse.preferences.version=1
 project.bucket=
 project.bucket.overrideDefault=false
