--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,15 @@
     <welcome-file>blog.jsp</welcome-file>
   </welcome-file-list>
   
+  <servlet>
+    <servlet-name>viewpost</servlet-name>
+    <servlet-class>blog.BlogPostServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>viewpost</servlet-name>
+    <url-pattern>/viewpost</url-pattern>
+  </servlet-mapping>
+  
 	<servlet>
 		<servlet-name>Servlet</servlet-name>
 		<servlet-class>blog.Servlet</servlet-class>
